Hystrix dashboard 使用注意在新版本中dashboard的使用不支持3.4.1jquery的语法，因此要修改官方的monitor.rthf ${window}.load(function()   --->${window}.on("load",function()chiry2021/2/1, 17:20

--- a/users9999/src/main/resources/application.properties
+++ b/users9999/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.service-name=${spring.application.name}
 
 
-#修改微服务的
+#修改微服务的负载均衡策略
 products.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
+
+#开启feign对hystrix的支持
+feign.hystrix.enabled=true
