Hystrix dashboard 使用注意在新版本中dashboard的使用不支持3.4.1jquery的语法，因此要修改官方的monitor.rthf ${window}.load(function()   --->${window}.on("load",function()chiry2021/2/1, 17:20

--- a/products9998/pom.xml
+++ b/products9998/pom.xml
@@ -52,6 +52,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<!--引入hystrix 实现熔断、服务降级-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+
+		<!--引入config -client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 	</dependencies>
 
 
